welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:5: error: type mismatch;
 found   : Unit
 required: Boolean
		for (k <- 0 to 4){
                       ^arrayFront9:11: error: not found: value num
			if (num.length>4)
                            ^arrayFront9:12: error: type mismatch;
 found   : Unit
 required: Boolean
		for (k <- 0 to n){
                       ^arrayFront9:11: error: type mismatch;
 found   : Unit
 required: Boolean
			if (num.length>4)
                        ^